# gpu-pathtracer

./: .clang-format  .gitignore  .gitmodules  BUILD  CMakeLists.txt  WORKSPACE  camera.cpp  camera.h  common.h  main.cpp  main_granite.cpp
build_rules/: gsl.BUILD  meshoptimizer.BUILD  radeon_rays.BUILD  rapidjson.BUILD  shaderc.BUILD  spirv_cross.BUILD  stb.BUILD  tinyobjloader.BUILD  volk.BUILD  vulkan_headers.BUILD
build_rules/vulkan_sdk/: BUILD  glsl_compile.bzl  repository_rule.bzl
bvh/: bvh_builder.h
bvh/RadeonRays/: bvh.comp  bvh_intersect.comp  intersector_skip_links.cpp  intersector_skip_links.h  plain_bvh_translator.cpp  plain_bvh_translator.h
cmake/: glslang.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: config-inc.h  depth.frag  quad.vert
shaders/RadeonRays/: bvh.glslh
src/: BUILD  camera.cpp  camera.h  common.h  main_granite.cpp  main_test.cpp
src/bvh/: bvh_builder.cpp  bvh_builder.h  mesh_view.h
src/bvh/RadeonRays/: intersector_skip_links.cpp  intersector_skip_links.h  plain_bvh_translator.cpp  plain_bvh_translator.h
ui/: imgui_impl_vulkan.cpp
